[gd_scene load_steps=6 format=3 uid="uid://dcldpre5a6bu0"]

[ext_resource type="PackedScene" uid="uid://dv825sqfrbv4x" path="res://GameFiles/health.tscn" id="1_5dgap"]
[ext_resource type="Script" uid="uid://dnv8m8ng6f467" path="res://GameFiles/Enemies/base_enemy_ai.gd" id="1_68xbx"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_mfiwl"]

[sub_resource type="CylinderMesh" id="CylinderMesh_lrw0o"]
top_radius = 0.1
bottom_radius = 0.15
height = 0.3

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_tsumw"]

[node name="BaseEnemy" type="CharacterBody3D"]
collision_layer = 5
script = ExtResource("1_68xbx")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_mfiwl")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -0.00471237, -0.999989, 0, 0.999989, -0.00471237, 0, 0.442982, 0.640885)
mesh = SubResource("CylinderMesh_lrw0o")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_tsumw")

[node name="ShootTimer" type="Timer" parent="."]

[node name="Health" parent="." instance=ExtResource("1_5dgap")]
MAX_HP = 1
curr_hp = 1

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.390204, 0)
target_position = Vector3(0, 0, 15)

[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="on_death" from="Health" to="." method="_on_death"]
